--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="favicon.ico" type="image/png">
   <title>Webpack</title>
 </head>
 <body>
@@ -14,6 +15,11 @@
   <hr>
 
   <div class="logo"></div>
+
+  <hr>
+
+  <pre></pre>
+
 </div>
 </body>
 </html>
