--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,15 @@
 
   <pre></pre>
 
+  <hr>
+
+  <div class="box">
+    <h2>Less</h2>
+  </div>
+
+  <div class="card">
+    <h2>Less</h2>
+  </div>
 </div>
 </body>
 </html>
